# jaicode

./: .gitignore  AGENTS.md  LICENSE  MIGRATION_PLAN.md  README.md  THIRD_PARTY_NOTICES.txt  USER_GUIDE.md  VERSION_POLICY.md  deploy-fast.sh  deploy-npm.sh  deploy.sh  install.sh  jaicode.json  package.json  preview.html  start-jaicode.sh  tsconfig.json
.kilo/agent/: jaicode.md
.kilo/command/: review-prd.md  save-prd.md
backend-go/: Makefile  README.md  go.mod  handlers.go
backend-go/cmd/jaicode-desktop/: main.go
backend-go/cmd/jaicode-server/: main.go
backend-go/cmd/jaicode-web/: main.go
backend-go/cmd/test-imports/: main.go
backend-go/internal/agents/: pool.go
backend-go/internal/audit/: logger.go
backend-go/internal/auth/: session.go  session_test.go
backend-go/internal/cache/: cache_test.go  (+2 more)
backend-go/proto/: jaicode.proto
backend-go/server/: server.go
consulting/decisions/: adr-001-core-skills.md
consulting/sessions/: 2026-07-04.md
desktop-app/: index.html  package.json
desktop-app/backend/: go.mod  main.go  main_test.go
desktop-app/src/: main.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
prd/: 01-market-positioning.md  02-architecture-design.md  03-feature-design.md  04-business-process.md  05-frontend-design.md  06-interactive-tui.md  07-jai-builder-market.md  08-jai-builder-architecture.md  09-capability-gap-analysis.md  10-authorization-framework.md  11-optimization-roadmap.md  12-optimization-detailed.md  13-file-handling-complete.md  14-competitor-gap-analysis.md  INDEX.md
(+18 files in other folders)
